Updated about index.html

--- a/about/index.html
+++ b/about/index.html
@@ -32,14 +32,66 @@
       </div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank" rel="noopener"> FAQ </a></li>
-          <li><a href="about/index.html" target="_blank" rel="noopener"> About </a></li>
+          <li><a href="../faq/index.html" target="_blank" rel="noopener"> FAQ </a></li>
+          <li><a href="index.html" target="_blank" rel="noopener"> About </a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main>
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>
+          Our Mission - we want to make you the team you always wanted to be.
+        </h2>
+        <div class="mission-content">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, saepe ab sunt 
+            rem quos odio nulla commodi recusandae minima et natus a nihil mollitia quia 
+            dolorem possimus? Cum, aperiam iusto?
+          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci suscipit 
+            corporis quam sed neque! Error quis minus ipsam voluptatem ut molestias laborum 
+            consequatur fuga repudiandae eligendi eveniet, repellat saepe excepturi?
+          </p>
+        </div> <!-- MISSION-CONTENT ENDS HERE -->
+      </div> 
+    </section>  <!-- Mission section ends here  -->
+
+    <section class="map">
+      <figure>
+        
+      </figure>  
+    </section>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>
+          Contact us, because you all need this.
+        </h2>
+      </div>    
+    </section>
+    <div class="contact-content">
+      <div>
+        <h4>General Information</h4>
+        <address>
+          <p>
+            333 Main St, Lake Geneva, WI 53147<br>
+            555-555-5555<br>
+            hello@unplugged.com
+          </p>
+        </address>
+      </div>
+      <div>
+        <h4>Chat with a Facillitator</h4>
+        <address>
+          <p>
+            555-555-5555<br>
+            facillitator@unplugged.com
+          </p>
+        </address>
+      </div>
+    </div> <!--  contact-content ends here -->
 
   </main>
 
