Updated faq index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -32,16 +32,43 @@
       </div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank" rel="noopener"> FAQ </a></li>
-          <li><a href="about/index.html" target="_blank" rel="noopener"> About </a></li>
+          <li><a href="index.html" target="_blank" rel="noopener"> FAQ </a></li>
+          <li><a href="../about/index.html" target="_blank" rel="noopener"> About </a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
-
-  </main>
+  <main class="faq">
+    <div class="content-wrapper">
+      <h2>
+        Frequently Asked Questions
+      </h2> 
+      <div class="faq-content">
+        <h4>How do I get to the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci suscipit 
+          corporis quam sed neque! Error quis minus ipsam voluptatem ut molestias laborum 
+          consequatur fuga repudiandae eligendi eveniet, repellat saepe excepturi?
+        </p>
+      </div>
+      <div class="faq-content">
+        <h4>What kind of team is right for the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eius, 
+          mollitia harum, facilis rerum quae sit suscipit velit voluptate, placeat officia 
+          architecto! Minus debitis laboriosam quis quibusdam quod ex. Qui.
+        </p>
+      </div>
+      <div class="faq-content">
+        <h4>What size teams can you accommodate?</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam autem soluta asperiores aspernatur in doloribus earum alias optio, ea quos cumque aperiam voluptate maiores iure, dignissimos ullam veniam eos perspiciatis.</p>
+      </div>
+      <div class="faq-content">
+        <h4>Is there really no wifi available?</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, consequuntur. Ipsam impedit aspernatur eius sapiente perferendis. Quidem officiis eligendi non voluptatem cumque sint ipsum quos dicta? Nobis, aut quasi. Veniam!</p>
+      </div>
+    </div>
+    <!----- FAQ CONTENT-WRAPPER ENDS HERE  ----->
+  </main> 
 
   <footer>
    
