Updated css file

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
   
   </main>
-    <!-- main wrapper -->
+    <!----------------- main wrapper ends --------------->
   
   <footer>
    
