Updated about index and css

--- a/about/index.html
+++ b/about/index.html
@@ -42,9 +42,9 @@
   <main>
     <section class="mission">
       <div class="content-wrapper">
-        <h2>
-          Our Mission - we want to make you the team you always wanted to be.
-        </h2>
+          <h2>
+            Our Mission - we want to make you the team you always wanted to be.
+          </h2>
         <div class="mission-content">
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, saepe ab sunt 
             rem quos odio nulla commodi recusandae minima et natus a nihil mollitia quia 
@@ -54,8 +54,8 @@
             corporis quam sed neque! Error quis minus ipsam voluptatem ut molestias laborum 
             consequatur fuga repudiandae eligendi eveniet, repellat saepe excepturi?
           </p>
-        </div> <!-- MISSION-CONTENT ENDS HERE -->
-      </div> 
+        </div> 
+      </div>
     </section>  <!-- Mission section ends here  -->
 
     <section class="map">
@@ -64,34 +64,34 @@
       </figure>  
     </section>
 
-    <section class="contact-section">
+    <section class="contact-about">
       <div class="content-wrapper">
         <h2>
           Contact us, because you all need this.
-        </h2>
-      </div>    
+        </h2>   
+        <div class="contact-content">
+          <div>
+            <h4>General Information</h4>
+            <address>
+              <p>
+                333 Main St, Lake Geneva, WI 53147<br>
+                555-555-5555<br>
+                hello@unplugged.com
+              </p>
+            </address>
+          </div>
+          <div>
+            <h4>Chat with a Facillitator</h4>
+            <address>
+              <p>
+                555-555-5555<br>
+                facillitator@unplugged.com
+              </p>
+            </address>
+          </div>
+        </div> 
+      </div> 
     </section>
-    <div class="contact-content">
-      <div>
-        <h4>General Information</h4>
-        <address>
-          <p>
-            333 Main St, Lake Geneva, WI 53147<br>
-            555-555-5555<br>
-            hello@unplugged.com
-          </p>
-        </address>
-      </div>
-      <div>
-        <h4>Chat with a Facillitator</h4>
-        <address>
-          <p>
-            555-555-5555<br>
-            facillitator@unplugged.com
-          </p>
-        </address>
-      </div>
-    </div> <!--  contact-content ends here -->
 
   </main>
 
