updated css and faq index

--- a/faq/index.html
+++ b/faq/index.html
@@ -40,11 +40,13 @@
   </header>
 
   <main class="faq">
-    <div class="content-wrapper">
+    <div class="faq-header">
       <h2>
         Frequently Asked Questions
       </h2> 
-      <div class="faq-content">
+    </div>
+    <div class="faq-content-wrapper">
+     <div class="faq-content">
         <h4>How do I get to the Unplugged retreat?</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci suscipit 
           corporis quam sed neque! Error quis minus ipsam voluptatem ut molestias laborum 
