Updated css for styling mobile

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
    
     <div class="content-wrapper">
       <div class="footer-content">
-        <div class="contact">
+        <div class="contact">xs
           <h4>Contact</h4>
           <address>
             <p>
