--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src=""alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+    </figure>
       <div class="header-divider">
       </div>
       <nav>
@@ -117,6 +119,11 @@
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
           <div>
+            <figure>
+              <a href="">
+                <img src="img/retreat-lacrue.jpg" alt="The Lacrue Retreat">
+              </a>
+            </figure>
             <h3>LaCrue Bottling Co.<br>
                 October 2018
             </h3>
@@ -134,7 +141,7 @@
    
     <div class="content-wrapper">
       <div class="footer-content">
-        <div class="contact">xs
+        <div class="contact">
           <h4>Contact</h4>
           <address>
             <p>
