--- a/about/index.html
+++ b/about/index.html
@@ -31,9 +31,11 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="#">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+    </figure>
       <div class="header-divider">
       </div>
       <nav>
@@ -66,7 +68,9 @@
 
     <section class="map">
       <figure>
-        
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3299.3491475820356!2d-117.07795228979397!3d34.21410237298418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c4ac0be0045423%3A0x453599909385e9f9!2sMusic%20Camp%20Rd%2C%20Arrowbear%20Lake%2C%20CA%2092314!5e0!3m2!1sen!2sus!4v1685077550996!5m2!1sen!2sus" width="600" height="450" 
+        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </figure>  
     </section>
 
@@ -95,8 +99,8 @@
               </p>
             </address>
           </div>
-        </div> 
-      </div> 
+        </div> <!-- end contact-content -->
+      </div> <!--- end content-wrapper -->
     </section>
 
   </main>
