--- a/faq/index.html
+++ b/faq/index.html
@@ -25,6 +25,8 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <script src="https://kit.fontawesome.com/4042b31e7e.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
