Updated about and faq page with social icons

--- a/about/index.html
+++ b/about/index.html
@@ -122,20 +122,28 @@
         </div>
         <div class="social">
           <h4>Social</h4>
-        </div>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com" target="_blank" rel="noopener"></a>
+              <a href="https://www.facebook.com" target="_blank" rel="noopener">
+                <i class="fa-brands fa-facebook" style="color: #527158;"></i>
+              </a>
             </p>
             <p>
-              <a href="https://www.twitter.com" target="_blank" rel="noopener"></a>
+              <a href="https://www.twitter.com" target="_blank" rel="noopener">
+                <i class="fa-brands fa-twitter" style="color: #527158;"></i>
+              </a>
             </p>
             <p>
-              <a href="https://www.instagram.com" target="_blank" rel="noopener"></a>
+              <a href="https://www.instagram.com" target="_blank" rel="noopener">
+                <i class="fa-brands fa-instagram" style="color: #527158;"></i>
+              </a>
             </p>
           </div>
-      </div> <!--  footer content ends  -->
-    </div> <!--  footer content-wrapper ends -->
+        </div>
+      </div> 
+      <!--  footer content ends  -->
+    </div> 
+    <!--  footer content-wrapper ends -->
     <div class="copyright">
       <p>Copyright 2023 | Unplugged</p>
     </div>
