--- a/faq/index.html
+++ b/faq/index.html
@@ -34,7 +34,7 @@
   <header>
     <div class="content-wrapper">
       <a href="#">
-        <img src="" alt="unplugged logo">
+        <img src="../img/unpluggedlogo.png" alt="unplugged logo">
       </a>
       <div class="header-divider">
       </div>
@@ -95,18 +95,24 @@
         </div>
         <div class="social">
           <h4>Social</h4>
-        </div>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com" target="_blank" rel="noopener"></a>
+              <a href="https://www.facebook.com" target="_blank" rel="noopener">
+                <i class="fa-brands fa-facebook" style="color: #527158;"></i>
+              </a>
             </p>
             <p>
-              <a href="https://www.twitter.com" target="_blank" rel="noopener"></a>
+              <a href="https://www.twitter.com" target="_blank" rel="noopener">
+                <i class="fa-brands fa-twitter" style="color: #527158;"></i>
+              </a>
             </p>
             <p>
-              <a href="https://www.instagram.com" target="_blank" rel="noopener"></a>
+              <a href="https://www.instagram.com" target="_blank" rel="noopener">
+                <i class="fa-brands fa-instagram" style="color: #527158;"></i>
+              </a>
             </p>
           </div>
+        </div>
       </div> <!--  footer content ends  -->
     </div> <!--  footer content-wrapper ends -->
     <div class="copyright">
