--- a/faq/index.html
+++ b/faq/index.html
@@ -33,11 +33,13 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="../img/unpluggedlogo.png" alt="unplugged logo">
-      </a>
-      <div class="header-divider">
-      </div>
+      <figure>
+        <a href="#">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
+    <div class="header-divider">
+    </div>
       <nav>
         <ul>
           <li><a href="index.html" target="_blank" rel="noopener"> FAQ </a></li>
@@ -48,12 +50,10 @@
   </header>
 
   <main class="faq">
-    <div class="faq-header">
-      <h2>
-        Frequently Asked Questions
-      </h2> 
-    </div>
     <div class="faq-content-wrapper">
+      <div class="faq-header">
+        <h2>Frequently Asked Questions</h2> 
+      </div>
      <div class="faq-content">
         <h4>How do I get to the Unplugged retreat?</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci suscipit 
